@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-#Rev.1 - Version 5.0
+#Rev.2 - Version 5.0
 
 # "POST /admin/chroute.cgi" -> delete or add button
 sub chroute {
@@ -747,7 +747,12 @@ javascript
 $msg[0] = "Por favor... selecione a linha a ser removida!";
 $msg[1] = "Please... Select the line to delete!";
 print FILE << "javascript";
-           var selid = 0;
+           var selid = jQuery("#fwRouteGrid").jqGrid('getGridParam','selrow');
+           if (selid > 0) {
+              var clret = jQuery("#fwRouteGrid").jqGrid('getRowData', selid);
+              var defGroup = clret['Group'].replace(/\\?chk=.*/, "");
+           }
+
            rulesCt = 1;
            rulesGrid = delRow(jQuery("#fwRouteGrid"), rulesGrid, newRow, "$medited[$FW_LANG]", "$msg[$FW_LANG]");
            newRow = updnewRow();
@@ -763,10 +768,14 @@ print FILE << "javascript";
            allPolicies=updGrp();
            for (var i=2; i<selgroup.length && allPolicies.length > 0; i++) {
               find=0;
-              for (j=0;j<allPolicies.length && find==0; j++) if (selgroup.options[i].value === allPolicies[j] && rulesGrid.length > 0) find=1;
-              if (find == 0) {
-                 selgroup.remove(i);
-                 saveall=1;
+              var chkgroup = selgroup.options[i].value;
+              chkgroup=chkgroup.replace(/\\?chk=.*| chk=.*/, "");
+              if (chkgroup===defGroup) {
+                 for (j=0;j<allPolicies.length && find==0; j++) if (chkgroup === allPolicies[j] && rulesGrid.length > 0) find=1;
+                 if (find == 0) {
+                    selgroup.remove(i);
+                    saveall=1;
+                 }
                  break;
               }
            }
