@@ -5,6 +5,13 @@ The Web GUI for Firewall Configuration was introduced only in 4.2 series.
 The main bugfix was made in this series.
 
 
+18 Jan 2015
+	Include "clients-per-query 0" in DNS options
+
+17 Jan 2015
+	Webauth fwinput, fwroute, profiles bugfix
+	- Fix the array elements in selectbox when remove a firewall policy in web interface
+
 14 June 2014
 	Starting the new firewall serie.
 
